--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,64 +8,31 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText_mainActivity_username"
+        android:id="@+id/editText_mainActivity_url"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:hint="username" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText_mainActivity_password"
-        android:layout_below="@+id/editText_mainActivity_username"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText_mainActivity_username"
-        android:layout_alignEnd="@+id/editText_mainActivity_username"
-        android:hint="password" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText_mainActivity_id"
-        android:layout_below="@+id/editText_mainActivity_password"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText_mainActivity_password"
-        android:layout_alignEnd="@+id/editText_mainActivity_password"
-        android:hint="id" />
+        android:hint="url" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="commit"
-        android:id="@+id/button_mainActivity_commit"
-        android:layout_below="@+id/editText_mainActivity_id"
-        android:layout_alignRight="@+id/editText_mainActivity_id"
-        android:layout_alignEnd="@+id/editText_mainActivity_id" />
+        android:text="goto"
+        android:id="@+id/button_mainActivity_goto"
+        android:layout_below="@+id/editText_mainActivity_url"
+        android:layout_centerHorizontal="true" />
 
-    <TextView
+    <WebView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView_mainActivity_getReturnInfo"
-        android:layout_below="@+id/button_mainActivity_commit"
+        android:id="@+id/webView_mainActivity_mainweb"
+        android:layout_below="@+id/button_mainActivity_goto"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/button_mainActivity_commit"
-        android:layout_alignEnd="@+id/button_mainActivity_commit"
-        android:minLines="10"/>
+        android:layout_alignRight="@+id/editText_mainActivity_url"
+        android:layout_alignEnd="@+id/editText_mainActivity_url"
+        android:layout_alignParentBottom="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText_mainActivity_path"
-        android:layout_marginTop="22dp"
-        android:layout_below="@+id/textView_mainActivity_getReturnInfo"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/textView_mainActivity_getReturnInfo"
-        android:layout_alignEnd="@+id/textView_mainActivity_getReturnInfo" />
 </RelativeLayout>
